.gsd.migrating/exec/a612a1b2-62b4-4e3e-a878-9ee69bf19877.stderr
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
   Compiling cmt-rs v0.1.0 (/mnt/j/cmt-rs)
error[E0432]: unresolved import `crate::domain::downgrader::DowngraderExecutionOutcome`
    --> src/app/downgrader_controller.rs:1229:44
     |
1229 | ...L, DowngraderExecutionOutcome, D...
     |       ^^^^^^^^^^^^^^^^^^^^^^^^^^ no `Down...utcome` in `domain::downgrader`
     |
     = help: consider importing this enum instead:
             crate::services::downgrader::DowngraderExecutionOutcome
help: a similar name exists in the module
     |
1229 -             DELETE_PATCHES_CHECKBOX_LABEL, DowngraderExecutionOutcome, DowngraderFileGroup,
1229 +             DELETE_PATCHES_CHECKBOX_LABEL, DowngraderExecutionLogRow, DowngraderFileGroup,
     |

warning: unused import: `DowngraderInstallStatus`
    --> src/app/downgrader_controller.rs:1230:13
     |
1230 | ...   Down...Status, I...
     |       ^^^^...^^^^^^
     |
     = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `cmt-rs` (bin "cmt-rs" test) generated 1 warning
error: could not compile `cmt-rs` (bin "cmt-rs" test) due to 1 previous error; 1 warning emitted
